crud de productos

--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
@@ -59,7 +59,7 @@
                                     data-toggle="tooltip" 
                                     class="btn btn-sm btn-warning"
                                     data-original-title="Editar"
-                                    [routerLink]="['edit', product.id]"> 
+                                    [routerLink]="['edit', product.product_id.id]"> 
                                     <i class="fa fa-pencil"></i> 
                                 </a>
 
