--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/crear-producto/crear-producto.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/crear-producto/crear-producto.component.html
@@ -8,12 +8,15 @@
                     <span>{{ message }}, Llena los datos</span>
                 </div>
                 
-                <form action="" class="form-horizontal p-t-20">
+                <form [formGroup]="formProduct" (ngSubmit)="onFormProducto()" class="form-horizontal p-t-20">
                     <div class="form-group row">
                         <label for="" class=" col-sm-3 control-label">Nombre</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Nombre">
+                                <input type="text"
+                                       class="form-control" 
+                                       placeholder="Nombre"
+                                       formControlName="name">
                             </div>
                         </div>
                     </div>
@@ -21,7 +24,10 @@
                         <label for="" class=" col-sm-3 control-label">Precio</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Precio">
+                                <input  type="number"
+                                        class="form-control"
+                                        placeholder="Precio"
+                                        formControlName="precio">
                             </div>
                         </div>
                     </div>
@@ -30,7 +36,10 @@
                         <label for="" class=" col-sm-3 control-label">Descripción</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Descripción">
+                                <input  type="text"
+                                        class="form-control"
+                                        placeholder="Descripción"
+                                        formControlName="descripcion">
                             </div>
                         </div>
                     </div>
@@ -39,10 +48,23 @@
                         <label class="col-sm-3 control-label">Categoría</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <select class="form-control" name="">
+                                <select class="form-control" formControlName="categoria">
                                     <option value="">Seleccione la Categoria</option>
                                     <option *ngFor="let category of categories"
                                             [ngValue]="category.id">{{category.category_name}}</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label">Usuario</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <select class="form-control" formControlName="usuario">
+                                    <option value="">Seleccione el usuario</option>
+                                    <option *ngFor="let usuario of usuarios"
+                                            [ngValue]="usuario.id">{{usuario.first_name}} {{usuario.last_name}}</option>
                                 </select>
                             </div>
                         </div>
