--- a/frontend/ecommerce/src/app/pages/home/vendedores/vendedores.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedores/vendedores.component.html
@@ -2,8 +2,9 @@
     <div class="row">
 <h1 class="col-md-12 col-xl-12 col-sm-12 text-center">Vendedores</h1>
       <!--For-->
-    
-      <div class=" col-sm-6 col-md-5 col-lg-3 mb-3" *ngFor="let cuenta of cuentas">
+      <ng-container *ngFor="let cuenta of cuentas">
+        <ng-container *ngIf="cuenta.id!=cuenta_id">
+      <div class=" col-sm-6 col-md-5 col-lg-3 mb-3" >
           <!--Inicio CArd-->
           
           <a [routerLink]="['/vendedor', cuenta.id]">
@@ -18,6 +19,8 @@
           <!--Fincard-->
         </a>
       </div>
+    </ng-container>
+    </ng-container>
       <!--endfor-->
   </div>
   </div>
