--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -47,7 +47,7 @@
                             <li><a routerLink="/misProductos">Mis Productos</a></li>
                             <li><a class="btn btn-outline-danger" (click)="salir()">Cerrar Sesión</a></li>
                         </ul>
-                      <li><a routerLink="/landing"><img src="assets/icons/carrito.png" style="width: 30px;" alt=""></a>
+                      <li><a routerLink="/shopping"><img src="assets/icons/carrito.png" style="width: 30px;" alt=""></a>
                       </li>
                     </ul>
 
