--- a/frontend/ecommerce/src/app/components/shared/product-list/product-item/product-item.component.html
+++ b/frontend/ecommerce/src/app/components/shared/product-list/product-item/product-item.component.html
@@ -1,1 +1,15 @@
-<p>product-item works!</p>
+<div class="card mb-4 shadow-sm">
+  <img class="bd-placeholder-img card-img-top p-2" width="100%" src="assets/images/gallery/chair2.jpg" />
+
+  <div class="card-body">
+    <p class="card-text">
+      <strong>{{ 500 | currency:'USD' }}</strong>
+    </p>
+    <p class="card-text">prueba</p>
+    <div class="d-flex justify-content-between align-items-center">
+      <div class="btn-group">
+        <button type="button" class="btn btn-sm btn-outline-secondary product-btn">View Details</button>
+      </div>
+    </div>
+  </div>
+</div>
