--- a/frontend/ecommerce/src/app/components/shared/cart/cart-item/cart-item.component.html
+++ b/frontend/ecommerce/src/app/components/shared/cart/cart-item/cart-item.component.html
@@ -1,5 +1,7 @@
-<div class="cart-item">
-  <span>{{ cartItem.productName }}</span> x
-  <span>{{ cartItem }}</span>:
-  <strong>{{ (cartItem * cartItem.price) | currency:'USD' }}</strong>
+<div>
+  <div class="cart-item">
+    <span>{{ cartItem.productName }}</span> x
+    <span>{{ cartItem.qty }}</span>:
+    <strong>{{ (cartItem.qty * cartItem.price) | currency:'USD' }}</strong>
+  </div>
 </div>
