--- a/frontend/ecommerce/src/app/components/shared/cart/cart.component.html
+++ b/frontend/ecommerce/src/app/components/shared/cart/cart.component.html
@@ -1,12 +1,18 @@
-<div *ngIf="cartItems.length === 0" class="alert alert-info">Your Cart is Empty.</div>
+<div class="side-info">
+  <div class="alert alert-info">Your Cart is Full.</div>
+    <div>
+      <ul *ngIf="cartItems.length > 0" class="list-group">
+        <li class="list-group-item" *ngFor="let item of cartItems">
+         <app-cart-item [cartItem]="item"></app-cart-item>
+        </li>
+      
+        <li class="list-group-item active">
+          <strong>Total</strong> {{ cartTotal | currency:'USD' }}
+        </li>
+      </ul>
+    </div>
+    <div>
+      
+    </div>
 
-<ul *ngIf="cartItems.length > 0" class="list-group">
-  <li class="list-group-item" *ngFor="let item of cartItems">
-    <app-cart-item [cartItem]="item"></app-cart-item>
-  </li>
-
-  <li class="list-group-item active">
-    <strong>Total</strong> {{ cartTotal | currency:'USD' }}
-  </li>
-  
-</ul>
+</div> 
