--- a/frontend/ecommerce/src/app/components/shared/filter/filter.component.html
+++ b/frontend/ecommerce/src/app/components/shared/filter/filter.component.html
@@ -1,7 +1,7 @@
 <div class="card filters">
 
   <div class="card-header">
-    <strong>Filters</strong>
+    <strong>Filters (Editando)</strong>
   </div>
 
   <div class="card-body">
