--- a/frontend/ecommerce/src/app/components/shared/filter/filter.component.html
+++ b/frontend/ecommerce/src/app/components/shared/filter/filter.component.html
@@ -16,7 +16,7 @@
         <input type="number" id="to" class="form-control">
       </div>
 
-      <button class="btn btn-primary btn-block btn-sm">Filter by Price</button>
+      <button class="btn btn-warning btn-block btn-sm">Filter by Price</button>
     </form>
   </div>
 </div>
