--- a/frontend/ecommerce/src/app/components/shared/product-list/product-item/product-item.component.html
+++ b/frontend/ecommerce/src/app/components/shared/product-list/product-item/product-item.component.html
@@ -8,7 +8,7 @@
     <p class="card-text">prueba</p>
     <div class="d-flex justify-content-between align-items-center">
       <div class="btn-group">
-        <button type="button" class="btn btn-sm btn-outline-secondary product-btn">View Details</button>
+        <button type="button" class="btn btn-sm btn-outline-danger product-btn">View Details</button>
       </div>
     </div>
   </div>
