--- a/frontend/ecommerce/src/app/pages/home/shopping-cart/shopping-cart.component.html
+++ b/frontend/ecommerce/src/app/pages/home/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<app-banner-cart></app-banner-cart>
+<div class="row my-3">
   <div class="col-md-2">
     <app-filter></app-filter>
   </div>
@@ -7,7 +8,7 @@
     <app-product-list></app-product-list>
   </div>
 
-  <div class="col-md-3">
+  <div class="col-md-2">
     <app-cart></app-cart>
   </div>
 </div>
