--- a/frontend/ecommerce/src/app/components/shared/panelAdmin/header/header.component.html
+++ b/frontend/ecommerce/src/app/components/shared/panelAdmin/header/header.component.html
@@ -116,11 +116,11 @@
                                     <div class="u-img"><img [src]="dataAccount.user_img.img_route" alt="user"></div>
                                     <div class="u-text">
                                         <h4>{{dataAccount.first_name}} {{dataAccount.last_name}}</h4>
-                                        <p class="text-muted">{{dataAccount.email}}</p><a routerLink="/perfil" class="btn btn-rounded btn-danger btn-sm">Ver Perfil</a></div>
+                                        <p class="text-muted">{{dataAccount.email}}</p><a routerLink="perfil-admin" class="btn btn-rounded btn-danger btn-sm">Ver Perfil</a></div>
                                 </div>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a><i class="ti-user"></i> Mi perfil</a></li>
+                            <li><a routerLink="perfil-admin"><i class="ti-user"></i>Mi perfil</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a><i class="fa fa-power-off"></i> Logout</a></li>
                         </ul>
