--- a/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
                         <span class="hide-menu"> {{data.first_name}} {{data.last_name}} </span>
                     </a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a routerLinkActive="active" routerLink="/perfil">Perfil</a></li>
+                        <li><a routerLinkActive="active" routerLink="perfil-admin">Perfil</a></li>
                         
                         <li><a (click)="auth.logoutUser()" class="pointer">Logout</a></li>
                     </ul>
