dashboard cards-de-datos

--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-ordenes/crear-orden/crear-orden.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-ordenes/crear-orden/crear-orden.component.html
@@ -67,8 +67,9 @@
                             <div class="input-group">
                                 <input  type="number"
                                         class="form-control"
-                                        placeholder="Total a Pagar"
+                                        placeholder=""
                                         formControlName="total">
+                                        
                             </div>
                         </div>
                     </div>
