--- a/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
+++ b/frontend/ecommerce/src/app/pages/home/vendedorprofiles/vendedorprofiles.component.html
@@ -24,33 +24,11 @@
   
     
 
-<!--ng-container *ngFor="let product of products">
-    <div *ngIf="product.user_id.id==cuenta_id "class="col-md-4 col-xl-3 col-sm-1" >
-        <div class="card">
-            <div class="card-header">
-                {{product.name}}
-            </div>
-            <div class="card-body">
-                <div id="slider">
-                    <figure>
-                      <div *ngFor="let image of products_images ">
-                        <img *ngIf="product.id==image.product_id.id" src="{{image.images_id.img_route}}" alt="" class="img-fluid"
-                          alt="Card image">
-                      </div>
-                    </figure>
-                  </div>
-                {{product.description}}
-            </div>
-            <div class="card-footer">
-                {{product.price}}
-            </div>
-        </div>
-    </div>
-</ng-container-->
+
 
 <ng-container *ngFor="let product of products; let i = index;">
 <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas mb-0" >
-    <a routerLink="detalle">
+    <a [routerLink]="['/detalle', product.id]">
       <div class="contenedor-img text-center">
         <div id="slider">
             <figure>
@@ -77,7 +55,7 @@
           </div>
           <div class="flip-card-back">
 
-            <a href="" class="btn btn-carrito">Agregar al carrito</a>
+            <a [routerLink]="['/detalle', product.id]" class="btn btn-carrito">Agregar al carrito</a>
           </div>
         </div>
       </div>
