--- a/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/home/perfil/perfil.component.html
@@ -8,11 +8,10 @@
       <div class="text-center">
         <div class="uno">
             <img src="{{cuenta.user_img.img_route}}" class="img-thumbnail imag" alt="avatar">
-            <a href="{{cuenta.user_img.img_route}}"></a>
         </div>
         <br>
         <div class="col-sm-10 text-center"><h5> {{cuenta.first_name +' '+ cuenta.last_name}} </h5></div>
-             <input type="file" id="selectedFile" style="display: none;" />
+             <input type="file" id="selectedFile" style="display: none;" (change)="fotoSeleccionada($event)"/>
              <input type="button" class="btn btn-primary btn-lx botones" value="Nueva imagen de perfil" onclick="document.getElementById('selectedFile').click();" />
         </div>
         <hr>
@@ -40,7 +39,7 @@
                  <section>
                     <img src="{{cuenta.cover_img.img_route}}" class=" modelo" alt="Responsive image" width="100%" height="300px">
                     <div class="col-md-6 mb-3">
-                        <input type="file" id="selectedFile2" style="display: none;" />
+                        <input type="file" id="selectedFile2" style="display: none;" (change)="fotoSeleccionada($event)"/>
                         <input type="button" class="btn btn-primary btn-lx botones" value="Nuevo fondo de usuario" onclick="document.getElementById('selectedFile2').click();" />
                     </div>
                   </section>
@@ -71,7 +70,7 @@
                     
                     <div class="form-row col-md-6">
                         <div class=" form-group col-md-6 mb-3">
-                            <button type="button" class="btn btn-primary btn-lx botones" (click)="imprime()">Guardar Cambios</button>
+                            <button type="button" class="btn btn-primary btn-lx botones" (click)="update()">Guardar Cambios</button>
                             
                         </div>
                         <div class=" form-group col-md-6 mb-3">
