--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
@@ -77,6 +77,13 @@
                     </tbody>
                 </table>
             </div>
+
+            <div *ngIf="txtTermino.value.length === 0">
+                <button (click)="cambiarPagina(-5)" class="btn btn-secondary">Anteriores</button>
+                &nbsp;
+                <button (click)="cambiarPagina(2)" class="btn btn-secondary">Siguientes</button>
+            </div>
+
             </div>
         </div>
     </div>
